viewファイルの英文を日本語に変更する

--- a/app/views/lectures/_form.html.erb
+++ b/app/views/lectures/_form.html.erb
@@ -12,27 +12,27 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
+    <%= f.label :講義名 %><br>
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :teacher %><br>
+    <%= f.label :担当教員名 %><br>
     <%= f.text_field :teacher %>
   </div>
   <div class="field">
-    <%= f.label :number %><br>
+    <%= f.label :講義週 %><br>
     <%= f.number_field :number %>
   </div>
   <div class="field">
-    <%= f.label :begin_year %><br>
+    <%= f.label :開講年 %><br>
     <%= f.text_field :begin_year %>
   </div>
   <div class="field">
-    <%= f.label :begin_term %><br>
+    <%= f.label :開講時期 %><br>
     <%= f.number_field :begin_term %>
   </div>
   <div class="field">
-    <%= f.label :grade %><br>
+    <%= f.label :対象学年 %><br>
     <%= f.number_field :grade %>
   </div>
   <div class="actions">
