--- a/app/views/lectures/index.html.erb
+++ b/app/views/lectures/index.html.erb
@@ -3,13 +3,13 @@
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Teacher</th>
-      <th>Number</th>
-      <th>Begin year</th>
-      <th>Begin term</th>
-      <th>Grade</th>
-      <th>Materials path</th>
+      <th>講義名1</th>
+      <th>担当教員名</th>
+      <th>講義週</th>
+      <th>開講年</th>
+      <th>開講時期</th>
+      <th>対象学年</th>
+
       <th colspan="3"></th>
     </tr>
   </thead>
